Web Login Form Update

--- a/Login Page Form/index.html
+++ b/Login Page Form/index.html
@@ -10,7 +10,7 @@
 <body>
     <section id="Login">
         <div class="login-heading">
-            <h1 class="head">_____Login_____</h1>
+            <img src="./Media/Login_Logo.png" class="logo">
         </div>
         <div class="Login-flex">
             <div class="from-box">
@@ -24,6 +24,8 @@
                         <label for="Password">Password</label>
                         <br>
                         <input type="password" class="input" name="Pass" id="Pass" placeholder="Enter Your Password">
+                        <br>
+                        <a href="#" class="input-a">Forgot Password?</a>
                         <br><br>
                         <button type="submit" onclick="getdata()" class="btn"> Login </button>
                     </form>
