Update Web Add New Brand Form

--- a/Brand Add/index.html
+++ b/Brand Add/index.html
@@ -21,10 +21,10 @@
                     <br><br>
                     <label for="Status" class="lbl">Status :-</label>
                     <br>
-                    <label for="IN Use" class="lbl">In Use</label>
-                    <input type="radio" class="input" id="Use">
-                    <label for="Not Use" class="lbl">Not Use</label>
-                    <input type="radio" class="input" id="Not">
+                    <label for="IN Use" class="lbl-r">In Use</label>
+                    <input type="radio" class="input-r" id="Use">
+                    <label for="Not Use" class="lbl-r">Not Use</label>
+                    <input type="radio" class="input-r" id="Not">
                     <br><br>
                     <button type="button" onclick="getdata()" class="btn">Save</button>
                 </form>
