Customer Details Web Form Update CSS

--- a/Customer Details/index.html
+++ b/Customer Details/index.html
@@ -18,20 +18,22 @@
                          <li><a href="#home">Home</a></li>
                          <li><a href="#about">About</a></li>
                          <li><a href="#services">Services</a></li>
-                         <li><a href="#contact">Contact</a></li>
+                         <li><a href="#contactus">Contact Us</a></li>
                     </ul>
                  </nav>
             </div>
 
-            <div class="main">
-                <h1>Customer Details</h1>
-            </div>
 
             <div main-form>
                 
                 <form action="">
                     
                      <div class="form-flex">
+
+                        <div class="main">
+                            <h1>Customer Details</h1>
+                        </div>
+
                         <label for="cid" class="lbl">Customer ID :- </label>
                         <input type="text" class="input" placeholder="Enter Customer ID">
                         <br><br>
@@ -48,54 +50,60 @@
                      </div>
                     <hr>
 
-                    <div class="main">
-                        <h1>Purchase Details</h1>
-                    </div>
-                    <div>
-                        <label for="bname" class="lbl">Brand Name :- </label>
-                        <input type="text" class="input" placeholder="Enter Brand Name">
-                        <br><br>
-                        <label for="pname" class="lbl">Product Name :- </label>
-                        <input type="text" class="input" placeholder="Enter Product Name">
-                        <br><br>
-                        <label for="pprice" class="lbl">Per Price :- </label>
-                        <input type="text" class="input" placeholder="Enter Per Price Of Product">
-                        <br><br>
-                        <label for="qty" class="lbl">Quantity :- </label>
-                        <input type="text" class="input" placeholder="Enter Quantity">
-                        <br><br>
-                        <label for="gst" class="lbl">GST Applied :- </label>
-                        <input type="text" class="input" placeholder="Enter GST Applied">
-                        <br><br>
-                        <label for="pri" class="lbl">Price :- </label>
-                        <input type="text" class="input" placeholder="Enter Price">
-                        <br><br><br>
-                        <input type="button" value="Add" class="btn">
-                        <br><br>
-                    </div>
+                    <div class="form-flex">
 
+                        <div class="main">
+                            <h1>Purchase Details</h1>
+                        </div>
+
+                        <div>
+                            <label for="bname" class="lbl">Brand Name :- </label>
+                            <input type="text" class="input" placeholder="Enter Brand Name">
+                            <br><br>
+                            <label for="pname" class="lbl">Product Name :- </label>
+                            <input type="text" class="input" placeholder="Enter Product Name">
+                            <br><br>
+                            <label for="pprice" class="lbl">Per Price :- </label>
+                            <input type="text" class="input" placeholder="Enter Per Price Of Product">
+                            <br><br>
+                            <label for="qty" class="lbl">Quantity :- </label>
+                            <input type="text" class="input" placeholder="Enter Quantity">
+                            <br><br>
+                            <label for="gst" class="lbl">GST Applied :- </label>
+                            <input type="text" class="input" placeholder="Enter GST Applied">
+                            <br><br>
+                            <label for="pri" class="lbl">Price :- </label>
+                            <input type="text" class="input" placeholder="Enter Price">
+                            <br><br><br>
+                            <input type="button" value="Add" class="btn">
+                            <br><br>
+                        </div>
+                    </div>
                     <hr>
 
-                    <div>
-                        <div class="main">
-                            <h1>Customer Bill Details</h1>
+                        <div class="form-flex">
+
+                            <div>
+                                <div class="main">
+                                    <h1>Customer Bill Details</h1>
+                                </div>
+                                <div>
+                                    <label for="bill" class="lbl">Bill :- </label>
+                                    <input type="text" class="input" placeholder="Enter Bill Amount">
+                                    <br><br>
+                                    <label for="dis" class="lbl">Discount :- </label>
+                                    <input type="text" class="input" placeholder="Enter Discount ">
+                                    <br><br>
+                                    <label for="fbill" class="lbl">Final Bill :- </label>
+                                    <input type="text" class="input" placeholder="Final Bill Amount">
+                                    <br><br><br>
+                                    <input type="button" value="Save" class="btn-l">
+                                    <input type="button" value="Refresh" class="btn-s">
+                                    <br><br>
+                                    <hr>
+                                </div>
+                           </div>
                         </div>
-                        <div>
-                            <label for="bill" class="lbl">Bill :- </label>
-                            <input type="text" class="input" placeholder="Enter Bill Amount">
-                            <br><br>
-                            <label for="dis" class="lbl">Discount :- </label>
-                            <input type="text" class="input" placeholder="Enter Discount ">
-                            <br><br>
-                            <label for="fbill" class="lbl">Final Bill :- </label>
-                            <input type="text" class="input" placeholder="Final Bill Amount">
-                            <br><br><br>
-                            <input type="button" value="Save" class="btn">
-                            <input type="button" value="Refresh" class="btn-s">
-                            <br><br>
-                            <hr>
-                        </div>
-                    </div>
                 </form>
             </div>
     </section>
