Expences Details Web Form Update

--- a/Expences Details/index.html
+++ b/Expences Details/index.html
@@ -35,24 +35,24 @@
                         </div>
 
                         <div>
-                            <label for="eid" class="lbl">Expences ID :- </label>
+                            <label for="eid" class="lbl">Expences ID </label>
                             <input type="text" class="input" placeholder="Enter Expences ID">
                             <br><br>
-                            <label for="ename" class="lbl">Expences Details :- </label>
+                            <label for="ename" class="lbl">Expences Details  </label>
                             <input type="text" class="input" placeholder="Enter Expences Details">
                             <br><br>
-                            <label for="apaid" class="lbl">Amount Paid :- </label>
+                            <label for="apaid" class="lbl">Amount Paid  </label>
                             <input type="text" class="input" placeholder="Enter Amount Paid ">
                             <br><br>
-                            <label for="date" class="lbl"> Date :- </label>
+                            <label for="date" class="lbl"> Date  </label>
                             <input type="date" class="input">
                             <br><br>
-                            <label for="img" class="lbl">Bill Image:- </label>
-                            <input type="file" id="img" name="img" accept="image/*">
+                            <label for="img" class="lbl">Bill Image </label>
+                            <input type="file" id="img" name="img" accept="image/*" class="imginput">
                             <br><br>
-                            <label for="paidby" class="lbl">Paid By. :- </label>
+                            <label for="paidby" class="lbl">Paid By  </label>
                             <input type="text" class="input" placeholder="Paid By">
-                            <br><br><br>
+                            <br><br><br><br>
                             <input type="button" value="Save" class="btn-l">
                             <input type="button" value="Refresh" class="btn-s">
                             <br><br>
