Stock Details Web Form Update

--- a/Stock Details/index.html
+++ b/Stock Details/index.html
@@ -35,29 +35,29 @@
                         </div>
 
                         <div>
-                            <label for="bname" class="lbl">Brand Name :- </label>
+                            <label for="bname" class="lbl">Brand Name  </label>
                             <input type="text" class="input" placeholder="Enter Brand Name ">
                             <br><br>
-                            <label for="pname" class="lbl">Product Name :- </label>
+                            <label for="pname" class="lbl">Product Name  </label>
                             <input type="text" class="input" placeholder="Enter Product Name">
                             <br><br>
-                            <label for="date" class="lbl">Date :- </label>
-                            <input type="date" class="input">
+                            <label for="date" class="lbl">Date  </label>
+                            <input type="date" class="input-date">
                             <br><br>
-                            <label for="did" class="lbl">Product ID :- </label>
+                            <label for="did" class="lbl">Product ID  </label>
                             <input type="text" class="input" placeholder="Enter Product ID">
                             <br><br>
-                            <label for="cstock" class="lbl">Current Stock :- </label>
+                            <label for="cstock" class="lbl">Current Stock  </label>
                             <input type="text" class="input" placeholder="Enter Current Stock">
                             <br><br>
-                            <label for="nstock" class="lbl">New Stock Added :- </label>
+                            <label for="nstock" class="lbl">New Stock Added  </label>
                             <input type="text" class="input" placeholder="Enter New Stock Added">
                             <br><br>
-                            <label for="mdate" class="lbl">MFG Date :- </label>
-                            <input type="date" class="input">
+                            <label for="mdate" class="lbl">MFG Date  </label>
+                            <input type="date" class="input-date">
                             <br><br>
-                            <label for="edate" class="lbl">Expiry Date :- </label>
-                            <input type="date" class="input">
+                            <label for="edate" class="lbl">Expiry Date  </label>
+                            <input type="date" class="input-date">
                             <br><br><br>
                             <input type="button" value="Submit" class="btn-l">
                             <input type="button" value="Refresh" class="btn-s">
