Distributor Details Web Form Update

--- a/Distributor Details/index.html
+++ b/Distributor Details/index.html
@@ -35,40 +35,40 @@
                         </div>
 
                         <div>
-                            <label for="did" class="lbl">Distributor ID :- </label>
+                            <label for="did" class="lbl">Distributor ID  </label>
                             <input type="text" class="input" placeholder="Enter Distributor ID">
                             <br><br>
-                            <label for="dname" class="lbl">Distributor Name :- </label>
+                            <label for="dname" class="lbl">Distributor Name  </label>
                             <input type="text" class="input" placeholder="Enter Distributor Name">
                             <br><br>
-                            <label for="daname" class="lbl">Distributor Address :- </label>
+                            <label for="daname" class="lbl">Distributor Address  </label>
                             <input type="text" class="input" placeholder="Enter Distributor Address ">
                             <br><br>
-                            <label for="gender" class="lbl">Gender :- </label>
+                            <label for="gender" class="lbl">Gender  </label>
                             <label for="male" class="lbl-r">Male</label>
-                            <input type="radio" class="rbtn">
-                            <label for="female" class="lbl-r">Female</label>
-                            <input type="radio" class="rbtn">
+                            <input type="radio" class="btn-r">
+                            <label for="female" class="lbl-rr">Female</label>
+                            <input type="radio" class="btn-r">
                             <br><br>
-                            <label for="drag" class="lbl">Registation NO. :- </label>
+                            <label for="drag" class="lbl">Registation NO  </label>
                             <input type="text" class="input" placeholder="Enter Registation No">
                             <br><br>
-                            <label for="tdate" class="lbl">Tie-Up Date :- </label>
-                            <input type="date" class="input">
+                            <label for="tdate" class="lbl">Tie-Up Date  </label>
+                            <input type="date" class="input-date">
                             <br><br>
-                            <label for="dmob" class="lbl">Mobile NO. :- </label>
+                            <label for="dmob" class="lbl">Mobile NO </label>
                             <input type="text" class="input" placeholder="Enter Mobile No">
                             <br><br>
-                            <label for="damob" class="lbl">Alternate Mobile NO. :- </label>
+                            <label for="damob" class="lbl">Alternate Mobile NO </label>
                             <input type="text" class="input" placeholder="Enter Alternate Mobile No">
                             <br><br>
-                            <label for="aadhar" class="lbl">Aadhar NO. :- </label>
+                            <label for="aadhar" class="lbl">Aadhar NO </label>
                             <input type="text" class="input" placeholder="Enter Aadhar No">
                             <br><br>
-                            <label for="pan" class="lbl">PAN NO. :- </label>
+                            <label for="pan" class="lbl">PAN NO </label>
                             <input type="text" class="input" placeholder="Enter PAN No">
                             <br><br>
-                            <label for="email" class="lbl">Email ID. :- </label>
+                            <label for="email" class="lbl">Email ID </label>
                             <input type="text" class="input" placeholder="Enter Email ID">
                             <br><br><br>
                             <input type="button" value="Save" class="btn-l">
