Product Details Web Form Update

--- a/Product Details/index.html
+++ b/Product Details/index.html
@@ -35,34 +35,34 @@
                         </div>
 
                         <div>
-                            <label for="did" class="lbl">Product ID :- </label>
+                            <label for="did" class="lbl">Product ID  </label>
                             <input type="text" class="input" placeholder="Enter Product ID">
                             <br><br>
-                            <label for="bname" class="lbl">Brand Name :- </label>
+                            <label for="bname" class="lbl">Brand Name  </label>
                             <input type="text" class="input" placeholder="Enter Brand Name ">
                             <br><br>
-                            <label for="pname" class="lbl">Product Name :- </label>
+                            <label for="pname" class="lbl">Product Name  </label>
                             <input type="text" class="input" placeholder="Enter Product Name">
                             <br><br>
-                            <label for="pprice" class="lbl">Purchase Price :- </label>
+                            <label for="pprice" class="lbl">Purchase Price  </label>
                             <input type="text" class="input" placeholder="Enter Purchase Price">
                             <br><br>
-                            <label for="sprice" class="lbl">Selling Price :- </label>
+                            <label for="sprice" class="lbl">Selling Price  </label>
                             <input type="text" class="input" placeholder="Enter Selling Price">
                             <br><br>
-                            <label for="date" class="lbl">Date :- </label>
-                            <input type="date" class="input">
+                            <label for="date" class="lbl">Date  </label>
+                            <input type="date" class="input-date">
                             <br><br>
-                            <label for="stock" class="lbl">Stock :- </label>
+                            <label for="stock" class="lbl">Stock </label>
                             <input type="text" class="input" placeholder="Enter Stock">
                             <br><br>
-                            <label for="dname" class="lbl">Distributor Name :- </label>
+                            <label for="dname" class="lbl">Distributor Name </label>
                             <input type="text" class="input" placeholder="Enter Distributor Name">
                             <br><br>
-                            <label for="gst" class="lbl">GST  :- </label>
+                            <label for="gst" class="lbl">GST  </label>
                             <input type="text" class="input" placeholder="Enter GST">
                             <br><br>
-                            <label for="decp" class="lbl">Description :- </label>
+                            <label for="decp" class="lbl">Description </label>
                             <input type="text" class="input" placeholder="Enter Product Description">
                             <br><br><br>
                             <input type="button" value="Save" class="btn-l">
